fix: re-align elements to grid

--- a/web/styles.css
+++ b/web/styles.css
@@ -1,19 +1,24 @@
 body{
     background-image: url('https://kenkunchen.files.wordpress.com/2021/02/dogs-5941898_1280.jpg?w=840');
-        background-size: auto;
+    min-height: 100vh;
+    /* background-image: url('../images/dogo mid-res.jpg'); */
+    background-size: cover;
     background-position-x: -2rem;
     background-position-y: -4rem;
     display: grid;
-    grid-template: 2fr 1fr 3fr / repeat(6, 16.6%);
+    grid-template: repeat(10, 1fr) / repeat(6, 1fr);
+    border: 1px solid red;
 }
 
 
 div#main-text{
     font-family: 'Nova Mono', monospace;
     font-size: 2rem;
-    grid-area: 2 / 2 / 2 / 6;
-    border: 1px solid green;
+    grid-area: 3 / 2 / 4 / 6;
     text-align: center;
 }
     
-    
+div#image-box{
+    background-color: #fff;
+    grid-area: 5/2/9/6;
+}
